RESOLVED FIXED196378
REGRESSION (r243250): Text interactions are no longer suppressed when editing in some websites
https://bugs.webkit.org/show_bug.cgi?id=196378
Summary REGRESSION (r243250): Text interactions are no longer suppressed when editing...
Wenson Hsieh
Reported 2019-03-28 16:04:03 PDT
Attachments
Patch (8.51 KB, patch)
2019-03-28 21:44 PDT, Wenson Hsieh
simon.fraser: review+
Patch for landing (8.48 KB, patch)
2019-03-29 12:30 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-03-28 21:44:27 PDT
Simon Fraser (smfr)
Comment 2 2019-03-29 11:57:03 PDT
Comment on attachment 366245 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=366245&action=review > LayoutTests/editing/selection/ios/hide-selection-in-textarea-with-transform.html:41 > +function focusTextarea(overflow) { { on next line. > LayoutTests/editing/selection/ios/hide-selection-in-textarea-with-transform.html:46 > +async function tapButtonAndWaitForKeyboard(button, caretShouldBeVisible) { ditto
Wenson Hsieh
Comment 3 2019-03-29 12:30:11 PDT
Created attachment 366295 [details] Patch for landing
WebKit Commit Bot
Comment 4 2019-03-29 13:09:08 PDT
Comment on attachment 366295 [details] Patch for landing Clearing flags on attachment: 366295 Committed r243656: <https://trac.webkit.org/changeset/243656>
Note You need to log in before you can comment on or make changes to this bug.